--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "poi build --dist docs --homepage /metropolis/"
+  },
   "dependencies": {
     "css-loader": "^0.28.7",
     "node-sass": "^4.7.2",
