--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "css-loader": "^0.28.7",
+    "launchpad-mini": "^2.1.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "tone": "^0.11.11"
